--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"node index.js"
   },
-  "author": "\"end to end\"",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
